<resources>
    <string name="app_name">BMIv2</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="you_don_t_have_an_account">You Don\'t Have An Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome back</string>
    <string name="if_you_already_have_an_account_log_in">If you already have an account, log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="if_you_dont_already_have_an_account">if you dont already have an account</string>
    <string name="name">name</string>
    <string name="e_mail">E-Mail</string>
    <string name="re_password">Re-password</string>
    <string name="create">Create</string>
    <string name="you_have_an_account">You have an account</string>
    <string name="login">Login</string>
    <string name="you_have_an_account_">you have an account ?</string>
    <string name="complete_your_information">Complete Your Information</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="java">Java</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="_1">1</string>
    <string name="number">number</string>
    <string name="kg">KG</string>
    <string name="cm">cm</string>
    <string name="kg_">kg</string>
    <string name="aa">—</string>
    <string name="aa1">+</string>
    <string name="aa3">+</string>
    <string name="aa4">—</string>
    <string name="save_data">Save Data</string>
    <string name="hi_mohammed">Hi, Mohammed</string>
    <string name="current_status">Current Status</string>
    <string name="old_status">Old Status</string>
    <string name="normal_still_good">Normal (still Good)</string>
    <string name="view_food">View Food</string>
    <string name="add_record">Add Record</string>
    <string name="add_food">Add Food</string>
    <string name="_20_1_2020">20/1/2020</string>
    <string name="_60kg">60KG</string>
    <string name="normal">Normal</string>
    <string name="_170cm">170CM</string>
    <string name="new_record">New Record</string>
    <string name="save_data">Save Data</string>
    <string name="add_food_details">Add food details</string>
    <string name="calory">Calory</string>
    <string name="category">Category</string>
    <string name="upload_photo">Upload photo</string>
    <string name="save">save</string>
    <string name="cal_g">cal/g</string>
    <string name="todo">TODO</string>
    <string name="food_list">Food list</string>
    <string name="edit">Edit</string>
    <string name="x">x</string>
    <string name="salamon">Salamon</string>
    <string name="_22cal_g">22cal/g</string>
    <string name="fish">Fish</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="_22">22</string>
    <string name="salmon">Salmon</string>
</resources>