<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatAccound">


    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="646dp"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="#23A7FF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="598dp"
        android:text="@string/if_you_dont_already_have_an_account"
        android:textAlignment="center"
        android:textColor="#676767"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="514dp"
        android:hint="@string/name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextTextPassword12"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editText23"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="379dp"
        android:hint="@string/password"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/editTextTextPassword34"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="310dp"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="513dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="153dp"
        android:backgroundTint="#2196F3"
        android:text="@string/create"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="613dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="88dp"
        android:text="@string/you_have_an_account_"
        android:textColor="#353535"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="254dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="85dp"
        android:text="@string/login"
        android:textColor="#2196F3"
        android:textSize="18sp" />


</RelativeLayout>