<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userStatus">

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/hi_mohammed"
        android:textAlignment="center"
        android:textColor="#5A5A5A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="364dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/current_status"
        android:textColor="#FF23A7FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/old_status"
        android:textColor="#FF23A7FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="298dp"
        android:layout_height="326dp"
        android:background="#FF23A7FF"
        android:backgroundTint="#FF23A7FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="262dp"
            android:layout_height="107dp">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/_20_1_2020"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="168dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/_60kg"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="168dp" />
        </TableRow>

        <TableRow
            android:layout_width="262dp"
            android:layout_height="107dp">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/normal"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="168dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/_170cm"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="168dp" />
        </TableRow>
    </TableLayout>





    <TextView
        android:id="@+id/textView6"
        android:layout_width="311dp"
        android:layout_height="38dp"
        android:text="@string/normal_still_good"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="168dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="136dp"
        android:layout_height="49dp"
        android:backgroundTint="#FF23A7FF"
        android:text="@string/add_food"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="611dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="136dp"
        android:layout_height="49dp"
        android:backgroundTint="#FF23A7FF"
        android:text="@string/add_record"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="611dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="313dp"
        android:layout_height="46dp"
        android:backgroundTint="#FF23A7FF"
        android:text="@string/view_food"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="660dp" />

</androidx.constraintlayout.widget.ConstraintLayout>